--- a/main/styles/styles.scss
+++ b/main/styles/styles.scss
@@ -238,7 +238,7 @@ button.swal2-confirm {
 	align-items: center;
 	overflow: hidden;
 	margin-left: 260px; // avoid sidebar overlapping
-	background-image: url('/img/bg.jpg');
+	background-image: url('/main/img/bg.jpg');
 	background-position: center;
 	background-size: auto;
 	min-height: 100vh;
