added Github button to sidebar

--- a/main/styles/styles.css
+++ b/main/styles/styles.css
@@ -256,6 +256,22 @@ button.swal2-confirm {
   text-align: center;
 }
 
+.github {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  place-items: center;
+  position: absolute;
+  width: calc(100% - 40px);
+  bottom: 0;
+}
+
 /* General */
 #cardWrapper {
   display: -webkit-box;
