--- a/main/styles/styles.css
+++ b/main/styles/styles.css
@@ -157,9 +157,9 @@ button.swal2-confirm {
 /* Sidebar */
 .sidebar {
   z-index: 100;
-  padding: 10px 20px 10px 20px;
+  padding: 10px 1vw;
   height: 100%;
-  width: 260px;
+  width: 16vw;
   position: fixed;
   top: 0;
   left: 0;
@@ -170,8 +170,7 @@ button.swal2-confirm {
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 
-.sidebar > div,
-.sidebar h4 {
+.sidebar > h4 {
   margin-bottom: 10px;
 }
 
@@ -179,14 +178,15 @@ button.swal2-confirm {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 10px;
-  padding-right: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  margin-top: 5px;
 }
 
 .sidebar .mods img {
-  margin-top: -25px;
-  width: 96px;
-  padding: 10px;
+  width: 6vw;
 }
 
 .sidebar #sideName {
@@ -211,17 +211,25 @@ button.swal2-confirm {
   }
 }
 
-.sidebar #avatar {
-  max-width: 220px;
-  max-height: 210px;
-  -webkit-box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
-          box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
-  margin: 10px auto 16px auto;
+.sidebar .av-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+.sidebar .av-container #avatar {
+  max-width: 10vw;
 }
 
 #characterStats {
   display: none;
-  width: 218px;
   font: 1rem "Play", sans-serif;
   color: #ffd9b5;
 }
@@ -260,6 +268,10 @@ button.swal2-confirm {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -268,8 +280,11 @@ button.swal2-confirm {
           align-items: center;
   place-items: center;
   position: absolute;
-  width: calc(100% - 40px);
-  bottom: 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  right: 15px;
+  top: 15px;
 }
 
 /* General */
@@ -284,7 +299,7 @@ button.swal2-confirm {
       -ms-flex-align: center;
           align-items: center;
   overflow: hidden;
-  margin-left: 260px;
+  margin-left: 16vw;
   background-image: url("../img/bg.jpg");
   background-position: center;
   background-size: auto;
@@ -365,9 +380,9 @@ button.swal2-confirm {
 
 #easterEgg {
   position: absolute;
-  bottom: 165px;
-  right: 165px;
-  width: 150px;
+  bottom: 5vw;
+  right: 5vw;
+  width: 8vw;
   cursor: pointer;
 }
 
@@ -711,5 +726,23 @@ div.show-stats {
 
 .hide {
   display: none;
+}
+
+@media screen and (max-width: 1440px) {
+  #avatar {
+    width: 9vw;
+  }
+  #nameRace,
+  #nameClass,
+  #nameBackground {
+    font-size: 1.2rem;
+  }
+  .avatar-stats,
+  .class-stats,
+  .back-stats,
+  #characterStats,
+  #sideStats {
+    font-size: 0.8rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
