--- a/main/styles/print-styles.css
+++ b/main/styles/print-styles.css
@@ -18,11 +18,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
   position: fixed;
-  width: 300px;
+  width: 230px;
   height: 200px;
   float: left;
   top: calc(50% - 100px);
-  left: 50px;
+  left: 30px;
   padding: 15px;
   border-radius: 10px;
   background: white;
@@ -146,6 +146,9 @@ div.page[size='A4'] {
 }
 
 #header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
   height: 120px;
 }
@@ -170,7 +173,11 @@ div.page[size='A4'] {
   font-size: 1.7rem;
 }
 
-.race {
+#raceUl {
+  margin-left: 55px;
+}
+
+.dos {
   margin-left: 96px;
 }
 
