--- a/main/styles/print-styles.scss
+++ b/main/styles/print-styles.scss
@@ -14,11 +14,11 @@ body {
 	display: grid;
 	align-items: center;
 	position: fixed;
-	width: 300px;
+	width: 230px;
 	height: 200px;
 	float: left;
 	top: calc(50% - 100px);
-	left: 50px;
+	left: 30px;
 	padding: 15px;
 	border-radius: 10px;
 	background: white;
@@ -126,6 +126,7 @@ div.page[size='A4'] {
 }
 
 #header {
+	display: flex;
 	position: relative;
 	height: 120px;
 }
@@ -150,7 +151,11 @@ div.page[size='A4'] {
 	font-size: 1.7rem;
 }
 
-.race {
+#raceUl {
+	margin-left: 55px;
+}
+
+.dos {
 	margin-left: 96px;
 }
 
