--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ***
  * VARIABLES *  
  *** */
@@ -9,8 +10,7 @@
 *::after {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 button,
@@ -22,11 +22,9 @@ textarea {
   margin: 0;
   -webkit-appearance: none;
   -moz-appearance: none;
-  -ms-appearance: none;
   appearance: none;
   outline: 0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   border: 0 !important;
   background-image: none;
 }
@@ -40,11 +38,9 @@ option {
   margin: 0;
   -webkit-appearance: none;
   -moz-appearance: none;
-  -ms-appearance: none;
   appearance: none;
   outline: 0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   background-image: none;
 }
 
@@ -66,9 +62,7 @@ button.swal2-confirm {
 
 /* Custom Imput*/
 .input input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   padding: 0 0.7em;
   width: 300px;
   height: 48px;
@@ -82,27 +76,18 @@ button.swal2-confirm {
   border: 0.1px #cba468 solid;
   background: #99803329;
 }
-
 .input textarea:focus,
 .input input:focus {
   outline: none;
 }
-
-.input ::-webkit-input-placeholder {
+.input ::-moz-placeholder {
   color: #fff;
   opacity: 1;
 }
-
 .input :-ms-input-placeholder {
   color: #fff;
   opacity: 1;
 }
-
-.input ::-ms-input-placeholder {
-  color: #fff;
-  opacity: 1;
-}
-
 .input ::placeholder {
   color: #fff;
   opacity: 1;
@@ -111,23 +96,17 @@ button.swal2-confirm {
 /* Custom Select */
 .select {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 348px;
   height: 48px;
   line-height: 3;
   overflow: hidden;
-  -webkit-box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
-          box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
+  box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
   border-radius: 5px;
   /* Arrow */
 }
-
 .select select {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   padding: 0 0.5em;
   color: #fff;
   background: #99803329;
@@ -135,14 +114,12 @@ button.swal2-confirm {
   border: 0.1px #cba468 solid;
   font: 1rem "Play", sans-serif;
 }
-
 .select select option {
   font: 1rem "Play", sans-serif;
   background-color: #e1b166;
 }
-
 .select ::after {
-  content: '\25BC';
+  content: "▼";
   position: absolute;
   top: 0;
   right: 0;
@@ -150,7 +127,6 @@ button.swal2-confirm {
   background-color: #cba468;
   cursor: pointer;
   pointer-events: none;
-  -webkit-transition: 0.25s all ease;
   transition: 0.25s all ease;
 }
 
@@ -169,26 +145,18 @@ button.swal2-confirm {
   background-image: url("https://www.transparenttextures.com/patterns/leather.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
-
 .sidebar > h4 {
   margin-bottom: 10px;
 }
-
 .sidebar .mods {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 100%;
   margin-top: 5px;
 }
-
 .sidebar .mods img {
   width: 6vw;
 }
-
 .sidebar #sideName {
   font: 1.8rem "Salsa", cursive;
   font-size: 2rem;
@@ -198,32 +166,22 @@ button.swal2-confirm {
   -webkit-animation: blinker 2s linear infinite;
           animation: blinker 2s linear infinite;
 }
-
 @-webkit-keyframes blinker {
   50% {
     opacity: 0;
   }
 }
-
 @keyframes blinker {
   50% {
     opacity: 0;
   }
 }
-
 .sidebar .av-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
-
 .sidebar .av-container #avatar {
   max-width: 10vw;
 }
@@ -265,19 +223,10 @@ button.swal2-confirm {
 }
 
 .github {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   place-items: center;
   position: absolute;
   width: -webkit-max-content;
@@ -289,15 +238,9 @@ button.swal2-confirm {
 
 /* General */
 #cardWrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   margin-left: 16vw;
   background-image: url("../img/bg.jpg");
@@ -305,23 +248,14 @@ button.swal2-confirm {
   background-size: auto;
   min-height: 100vh;
 }
-
 #cardWrapper > div {
-  -webkit-transform-origin: right;
-          transform-origin: right;
-  -webkit-transform: translateX(-2000px);
-          transform: translateX(-2000px);
-  -webkit-transition: -webkit-transform 1s ease-in-out;
-  transition: -webkit-transform 1s ease-in-out;
+  transform-origin: right;
+  transform: translateX(-2000px);
   transition: transform 1s ease-in-out;
-  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
-  display: -ms-grid;
   display: grid;
   position: absolute;
 }
-
 #cardWrapper .card {
-  display: -ms-grid;
   display: grid;
   place-items: center;
   width: 700px;
@@ -330,12 +264,9 @@ button.swal2-confirm {
   border-radius: 5px;
   border: 0.1px #cba468 solid;
   background: #1b100cd0;
-  -webkit-box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
-          box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
+  box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
 }
-
 #cardWrapper .card .card-title {
-  display: -ms-grid;
   display: grid;
   place-items: center;
   font: 1.8rem "Salsa", cursive;
@@ -343,22 +274,17 @@ button.swal2-confirm {
   color: #e1b166;
   text-shadow: 0px 2px 3px rgba(255, 217, 181, 0.15);
 }
-
 #cardWrapper .card .card-title h3 {
   font-size: 2.2rem;
   white-space: nowrap;
 }
-
 #cardWrapper .card .card-content {
-  display: -ms-grid;
   display: grid;
   place-items: center;
 }
-
 #cardWrapper .card .card-content > {
   margin: 15px;
 }
-
 #cardWrapper .card .card-content #randomName {
   cursor: pointer;
   width: 48px;
@@ -369,10 +295,8 @@ button.swal2-confirm {
   border-radius: 5px;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
-  -webkit-box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
-          box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
+  box-shadow: 0 19px 38px rgba(36, 24, 8, 0.23), 0 15px 12px rgba(46, 33, 15, 0.15);
 }
-
 #cardWrapper .card .card-buttons {
   display: inline-block;
   margin: 15px;
@@ -393,34 +317,26 @@ button.swal2-confirm {
 
 @-webkit-keyframes rotate-scale-up {
   0% {
-    -webkit-transform: scale(1) rotateZ(0);
     transform: scale(1) rotateZ(0);
   }
   50% {
-    -webkit-transform: scale(1.3) rotateZ(180deg);
     transform: scale(1.3) rotateZ(180deg);
   }
   100% {
-    -webkit-transform: scale(1) rotateZ(360deg);
     transform: scale(1) rotateZ(360deg);
   }
 }
-
 @keyframes rotate-scale-up {
   0% {
-    -webkit-transform: scale(1) rotateZ(0);
     transform: scale(1) rotateZ(0);
   }
   50% {
-    -webkit-transform: scale(1.3) rotateZ(180deg);
     transform: scale(1.3) rotateZ(180deg);
   }
   100% {
-    -webkit-transform: scale(1) rotateZ(360deg);
     transform: scale(1) rotateZ(360deg);
   }
 }
-
 .swal2-image {
   border-radius: 5px;
 }
@@ -430,177 +346,125 @@ button.swal2-confirm {
 }
 
 #stage2 .card-content .avatars {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   gap: 0px 0px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all 0.3s ease-in;
+  align-items: center;
   transition: all 0.3s ease-in;
 }
-
 #stage2 .card-content .avatar-wrapper {
-  display: -ms-grid;
   display: grid;
   place-items: center;
-  -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
-
 #stage2 .card-content .avatar-wrapper input {
   display: none;
   width: 120px;
 }
-
 #stage2 .card-content .avatar-wrapper .avatar-title {
   font: 1.8rem "Salsa", cursive;
   font-size: 24px;
   color: #ffd9b5;
 }
-
 #stage2 .card-content .avatar-wrapper .stats-wrapper {
   display: none;
 }
-
 #stage2 .card-content .avatar-wrapper:hover {
   background: #1b100cd0;
   border: 0.1px solid #cba468;
   width: 250px;
   padding: 10px;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
   z-index: 100;
-  -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
-
 #stage2 .card-content .avatar-wrapper:hover .stats-wrapper {
   display: block;
 }
 
 .avatars:hover > div:not(:hover) {
-  -webkit-transition: all 0.7s ease-in;
   transition: all 0.7s ease-in;
-  -webkit-transform: translateX(-25%) translateY(-25%) scale(0.7);
-          transform: translateX(-25%) translateY(-25%) scale(0.7);
+  transform: translateX(-25%) translateY(-25%) scale(0.7);
   opacity: 0.5;
 }
 
 #stage3 .card-content .classes {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   gap: 0px 0px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all 0.3s ease-in;
+  align-items: center;
   transition: all 0.3s ease-in;
 }
-
 #stage3 .card-content .class-wrapper {
-  display: -ms-grid;
   display: grid;
   place-items: center;
-  -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
-
 #stage3 .card-content .class-wrapper input {
   width: 120px;
 }
-
 #stage3 .card-content .class-wrapper .class-title {
   font: 1.8rem "Salsa", cursive;
   font-size: 24px;
   color: #ffd9b5;
 }
-
 #stage3 .card-content .class-wrapper .stats-wrapper {
   display: none;
 }
-
 #stage3 .card-content .class-wrapper:hover {
   background: #1b100cd0;
   border: 0.1px solid #cba468;
   width: 250px;
   padding: 10px;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
   z-index: 100;
-  -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
-
 #stage3 .card-content .class-wrapper:hover .stats-wrapper {
   display: block;
 }
 
 .classes:hover > div:not(:hover) {
-  -webkit-transition: all 0.7s ease-in;
   transition: all 0.7s ease-in;
-  -webkit-transform: translateX(-25%) translateY(-25%) scale(0.7);
-          transform: translateX(-25%) translateY(-25%) scale(0.7);
+  transform: translateX(-25%) translateY(-25%) scale(0.7);
   opacity: 0.5;
 }
 
 #stage4 .card-content .backgrounds {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   gap: 0px 0px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all 0.3s ease-in;
+  align-items: center;
   transition: all 0.3s ease-in;
 }
-
 #stage4 .card-content .back-wrapper {
-  display: -ms-grid;
   display: grid;
   place-items: center;
-  -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
-
 #stage4 .card-content .back-wrapper input {
   width: 120px;
 }
-
 #stage4 .card-content .back-wrapper .back-title {
   font: 1.8rem "Salsa", cursive;
   font-size: 24px;
   color: #ffd9b5;
 }
-
 #stage4 .card-content .back-wrapper .stats-wrapper {
   display: none;
 }
-
 #stage4 .card-content .back-wrapper:hover {
   background: #1b100cd0;
   border: 0.1px solid #cba468;
   width: 250px;
   padding: 10px;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
   z-index: 100;
-  -webkit-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in;
 }
-
 #stage4 .card-content .back-wrapper:hover .stats-wrapper {
   display: block;
 }
@@ -615,7 +479,6 @@ button.swal2-confirm {
   background-color: #4d2a00;
   background-image: url("https://www.transparenttextures.com/patterns/light-paper-fibers.png");
 }
-
 #stage5 .card-content #charcount {
   font: 1rem "Play", sans-serif;
   font-size: 14px;
@@ -631,17 +494,14 @@ textarea {
 }
 
 .classes:hover > div:not(:hover) {
-  -webkit-transition: all 0.7s ease-in;
   transition: all 0.7s ease-in;
-  -webkit-transform: translateX(-25%) translateY(-25%) scale(0.7);
-          transform: translateX(-25%) translateY(-25%) scale(0.7);
+  transform: translateX(-25%) translateY(-25%) scale(0.7);
   opacity: 0.5;
 }
 
 .race-button,
 .class-button,
 .back-button {
-  display: -ms-grid;
   display: grid;
   place-items: center;
   padding: 15px;
@@ -654,7 +514,6 @@ textarea {
   font: 1rem "Play", sans-serif;
   color: #ffd9b5;
 }
-
 .avatar-stats .tongue,
 .class-stats .tongue,
 .back-stats .tongue,
@@ -662,7 +521,6 @@ textarea {
   float: right;
   color: yellow !important;
 }
-
 .avatar-stats .stats-pos-value,
 .class-stats .stats-pos-value,
 .back-stats .stats-pos-value,
@@ -670,7 +528,6 @@ textarea {
   float: right;
   color: #3bf13b !important;
 }
-
 .avatar-stats .stats-neg-value,
 .class-stats .stats-neg-value,
 .back-stats .stats-neg-value,
@@ -678,7 +535,6 @@ textarea {
   float: right;
   color: #ec4a4a !important;
 }
-
 .avatar-stats .default,
 .class-stats .default,
 .back-stats .default,
@@ -697,23 +553,19 @@ textarea {
   margin-right: 5px;
   border-radius: 5px;
   background: #cba468;
-  -webkit-box-shadow: 0px 13px 15px -5px rgba(0, 0, 0, 0.45);
-          box-shadow: 0px 13px 15px -5px rgba(0, 0, 0, 0.45);
-  -webkit-transition: all 0.15s;
+  box-shadow: 0px 13px 15px -5px rgba(0, 0, 0, 0.45);
   transition: all 0.15s;
 }
 
 .button:hover {
   color: #ffd9b5;
   background: #e1b166;
-  -webkit-transition: all 0.15s;
   transition: all 0.15s;
 }
 
 /* HIDE / SHOW*/
 div.show-card {
-  -webkit-transform: translateX(0px) !important;
-          transform: translateX(0px) !important;
+  transform: translateX(0px) !important;
 }
 
 input.show-avatar {
@@ -732,17 +584,62 @@ div.show-stats {
   #avatar {
     width: 9vw;
   }
+
   #nameRace,
-  #nameClass,
-  #nameBackground {
+#nameClass,
+#nameBackground {
     font-size: 1.2rem;
   }
+
   .avatar-stats,
-  .class-stats,
-  .back-stats,
-  #characterStats,
-  #sideStats {
+.class-stats,
+.back-stats,
+#characterStats,
+#sideStats {
     font-size: 0.8rem;
   }
 }
-/*# sourceMappingURL=styles.css.map */
+.disclaimer {
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .sidebar,
+.github,
+.page-body,
+#cardWrapper {
+    display: none;
+  }
+
+  html {
+    background-color: #6e6353;
+  }
+
+  .disclaimer {
+    display: grid;
+    place-content: center;
+    min-height: 80vh;
+    width: 100vw;
+    font-family: sans-serif;
+  }
+  .disclaimer h3 {
+    color: #ec9f22;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+  }
+  .disclaimer p {
+    color: #f1ad3f;
+    margin-top: 2rem;
+    min-width: 300px;
+    width: 50%;
+    text-align: left;
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-inline: auto;
+  }
+  .disclaimer a {
+    text-decoration: none;
+    color: white;
+  }
+}/*# sourceMappingURL=styles.css.map */
